[package]
name = "fenpix"
version = "0.2.0"
edition = "2021"
authors = ["Small San"]
readme = "README.md"
repository = "https://github.com/Smallsan/fenpix"

description = "Fenpix is a Rust library that converts FEN strings into pixel chess boards."
license = "MIT"

[lib]
name = "fenpix"
crate-type = ["lib"]

[dependencies]
image = "0.24.9"

