[package]
name = "fenpix"
version = "0.2.4"
edition = "2021"
authors = ["Small San"]
readme = "README.md"
repository = "https://github.com/Smallsan/fenpix"
exclude = ["chess_board.png"]

description = "Fenpix is a Rust library that converts FEN strings into pixel chess boards."
license = "MIT"

[lib]
name = "fenpix"
crate-type = ["lib"]

[dependencies]
image = "0.24.9"

